--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack"
   },
   "keywords": [],
-  "author": "",
+  "author": "Sina",
   "license": "ISC",
   "devDependencies": {
     "webpack": "^5.1.3",
