--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "keywords": [],
   "author": "Sina",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "webpack": "^5.1.3",
     "webpack-cli": "^4.0.0"
