--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "Sina",
   "license": "MIT",
   "devDependencies": {
+    "css-loader": "^5.0.0",
+    "style-loader": "^2.0.0",
     "webpack": "^5.1.3",
     "webpack-cli": "^4.0.0"
   },
